@@ -8,6 +8,13 @@ Changes in version 2.0.0 M1 (2009-mm-dd)
 General
 * JDK 5.0 required for both building and running; for JDK 1.4 support use 1.2.x branch
 * upgraded to Spring 3.0
+* generified classes (both public and internal)
+
+Package org.springframework.osgi.context
+* improved serviceability by using NamedThreadLocal
+
+Package org.springframework.osgi.service
+* improved serviceability by using NamedInheritableThreadLocal
 
 
 Changes in version 1.2.0 final (2009-04-09)
